--- a/index.html
+++ b/index.html
@@ -173,6 +173,15 @@ function init(){
 	["0","(x<300||x>400)? 0 : 100","0","0","0","(x<300||x>400)? 0 : 1"],
 	["10","0.01"],
 	["-1","250","300","0","100","0","0"]);
+	presetarray[]=new Preset("Magnetic bottle",
+	"Two infinitesimally small magnetic dipoles at (200,300) and (700,300) that trap an electron between them.",
+	["0","0","0",
+	 "(3*(x-200)*(x-200)-(y-300)*(y-300)-z*z)/pow(dist(x,y,z,200,300,0),5)+(3*(x-700)*(x-700)-(y-300)*(y-300)-z*z)/pow(dist(x,y,z,700,300,0),5)",
+	 "3*(x-200)*(y-300)/pow(dist(x,y,z,200,300,0),5)+3*(x-700)*(y-300)/pow(dist(x,y,z,700,300,0),5)",
+	 "3*(x-200)*(z)/pow(dist(x,y,z,200,300,0),5)+3*(x-700)*(z)/pow(dist(x,y,z,700,300,0),5)"],
+	["50","0.005"].
+	["-5000000","420","350","0","40","-10","0"]);
+	
 }
 function update(){
 	Ex=new Function("x","y","z", "return " + document.getElementById("ex").value);
