--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@ var i;
 }
 function changepreset(){
 presetarray[selector.selectedIndex].updatepreset();
+ctx0.clearRect(0,0,900,600);
+launch();
 }
 function init(){
 	can0=document.getElementById("can0");
