--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ This is a program that traces the path of a charged particle in a customizable e
 <li>E and B can be entered as functions of the particle's coordinates: x, y, and z</li>
 <li>The path is projected onto the xy plane, with the origin at the lower left corner.</li>
 <li>Proper syntax: use * for multiplication, and pow(a,b) for a<sup>b</sup>. <br>
-Most basic math functions are included: exp(), sqrt(), sin(), asin() etc. as well as constants pi and e.
+Most basic math functions are included: exp(), sqrt(), sin(), asin() etc. as well as constants pi and e. <br>
 <a href="https://en.wikipedia.org/wiki/%3F:">Shorthand conditional operator ? :</a> can make piecewise functions. <br>
 The dist() function gives the distance between two points in space (it needs 6 arguments).</li>
 <li>You can set the initial position and velocity of the particle by clicking and dragging on the screen, or by entering values in the sidebar.</li>
