--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@ height:100%;
 </div>
 <canvas width="900" height="600" id="can0"></canvas>
 <canvas width="900" height="600" id="can1"></canvas>
+<canvas width="900" height="600" id="can2"></canvas>
 <canvas width="900" height="600" id="can3"></canvas>
 <div id="sidebar">
 <div id="whatisthis" onclick="showhelp()">What is This?</div><br>
