--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Electromagnetic Field Simulation</title>
 <script type="text/javascript">
-var can0,ctx0,can3,ctx3,selector;
+var can0,ctx0,can1,ctx1,can2,ctx2,can3,ctx3,selector;
 var charge1;
 var Ex,Ey,Ez,Bx,By,Bz;
 var conditions=[];
@@ -407,8 +407,12 @@ z-index:0;
 z-index:1;
 position:absolute;
 }
-#can3{
+#can1{
 z-index:2;
+position:absolute;
+}
+#can3{
+z-index:3;
 position:relative;
 }
 button{
