--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ if(animate){
 }
 function changepreset(){
 presetarray[selector.selectedIndex].updatepreset();
-ctx0.clearRect(0,0,900,600);
+clearall();
 launch();
 }
 function init(){
