--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ function init(){
 	"uniform B field on both sides that steers it back into the E field. In this model, the "+
 	"E field in the middle is simply +10 for y>300 and -10 for y<300; in real life they "+
 	"make sure the E field always adds to the particle's velocity by feeding a square wave "+
-	"of alternating current into two metal plates. The frequency of this wave is the angular "+
+	"of alternating current into two metal plates. The frequency of this signal is the angular "+
 	"frequency of the particle's circular motion: B*q/m = cyclotron frequency.",
 	["(x>440&&x<460)?(y<300?-10:10):0","0","0","0","0","(x>445&&x<455)?0:1"],
 	["10","0.01"],
