--- a/index.html
+++ b/index.html
@@ -558,10 +558,7 @@ determine where it should begin the next step. The method used in this program i
 The neat thing about this method is that when the step size is divided by n, the error 
 (difference between approximate and actual) is divided by n<sup>4</sup>, hence fourth order. 
 For example, going from stepsize = 0.01 to 0.001 makes the error 10000 times less. Caveat, 
-this only works if the function is sufficiently smooth. Also, javascript isn't very good at 
-dealing with floats so the error will shoot up if you try using step sizes smaller than 
-10<sup>-5</sup> (at that point the computation will probably crash your browser anyway).
-<br>
+this only works if the function is sufficiently smooth. <br>
 Made by William P. More programs hosted <a href="http://w2w32.github.io/">here</a>
 </div>
 <div id="darken" onclick="hidehelp()"></div>
